[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/snowglobe.png" type="Texture" id=1]
[ext_resource path="res://assets/cow1.png" type="Texture" id=2]
[ext_resource path="res://assets/cow2.png" type="Texture" id=3]
[ext_resource path="res://scripts/cow.gd" type="Script" id=4]
[ext_resource path="res://scenes/snowflake.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/snowglobe.gd" type="Script" id=6]
[ext_resource path="res://assets/dizzy_cow4.png" type="Texture" id=7]
[ext_resource path="res://assets/dizzy_cow1.png" type="Texture" id=8]
[ext_resource path="res://assets/dizzy_cow2.png" type="Texture" id=9]
[ext_resource path="res://assets/dizzy_cow3.png" type="Texture" id=10]
[ext_resource path="res://assets/click_me.png" type="Texture" id=11]
[ext_resource path="res://assets/snowglobe_click_mask.png" type="BitMap" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "dizziness",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "move1"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5, 2.5, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 3,
"values": [ Vector2( -94, 52 ), Vector2( -94, 52 ), Vector2( 98, 52 ), Vector2( 98, 52 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "move2"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 98, 52 ), Vector2( 8, 52 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "reveal"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show"
} ]
}

[node name="snowglobe" type="Node2D"]
script = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -366.0
margin_top = -360.0
margin_right = 366.0
margin_bottom = 360.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 366, 360 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_click_mask = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="cow" type="AnimatedSprite" parent="."]
position = Vector2( 98, 52 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
playing = true
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="cow"]
anims/move1 = SubResource( 2 )
anims/move2 = SubResource( 3 )

[node name="Timer" type="Timer" parent="cow"]
wait_time = 3.0
one_shot = true

[node name="snowflake" parent="." instance=ExtResource( 5 )]
position = Vector2( 93, -238 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="click_me" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -160 )
z_index = 1
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="click_me"]
anims/reveal = SubResource( 4 )

[connection signal="animation_finished" from="cow/AnimationPlayer" to="cow" method="_on_AnimationPlayer_animation_finished"]
[connection signal="caches_cleared" from="cow/AnimationPlayer" to="cow" method="_on_AnimationPlayer_caches_cleared"]
[connection signal="timeout" from="cow/Timer" to="cow" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
